# aap-drift-manager

./: .containerignore  .env.example  .gitignore  Containerfile  README.md  aap-drift-manager.yaml  pyproject.toml  requirements.txt  run_drift.py
config/: objects.yaml
playbooks/: deploy_splunk.yml
sample_aap_config/credentials/: machine_creds.yaml
sample_aap_config/inventories/: production.yaml
sample_aap_config/job_templates/: patch_servers.yaml
sample_aap_config/organizations/: default.yaml
sample_aap_config/projects/: demo_project.yaml
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  aap_scanner.py  drift_analyzer.py  git_reader.py  reconciler.py
src/crew/: __init__.py  drift_crew.py
src/models/: __init__.py  aap_objects.py  drift_report.py
src/tools/: __init__.py  aap_tools.py  diff_tools.py  git_tools.py  mcp_tools.py  reconcile_tool.py
tests/: __init__.py  test_drift_analyzer.py  test_git_tools.py
